--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>odin-recipes</h1>
-    <a href="biryani.html">Chicken Biryani</a>
-   
+    <ul>
+    <li><a href="biryani.html">Chicken Biryani</a></li>
+    
+    </ul>
 </body>
 </html>
