ADD LINK OF RECIPE IN INDEX FILE

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <h1>odin-recipes</h1>
     <ul>
-    <li><a href="biryani.html">Chicken Biryani</a></li>
-    
+    <li><a href="./pages/biryani.html">Chicken Biryani</a></li>
+    <li><a href="./pages/gobimanchurian.html">Gobi Manchurian</a></li>
+    <li><a href="./pages/samosa.html">Samosa</a></li>
+
     </ul>
 </body>
 </html>
